welcome.lessons.welcome.bat.bool1.SumDouble.scala.error
sumDouble:3: error: Int(2) does not take parameters
		return 2(a*a);
                        ^