welcome.lessons.welcome.bat.bool1.SumDouble.scala.code
def sumDouble(a: Integer, b: Integer): Integer = {
	if(a==b){
		return 2(a*a);
	}
	else {
		return a+b;
	}
}
